# test-4

./: README.md
test-4/: Cargo.toml
test-4/src/: main.rs
test-5/: README.md
test-6/: main.ts  package.json  readme.md
test-7/: README.md  metadata.json
test-7/offchain-js/: main.ts  package.json
test-7/substrate-node-template-polkadot-v0.9.25/: Cargo.toml
test-7/substrate-node-template-polkadot-v0.9.25/ev/chains/local_testnet/db/full/: 000039.sst  000040.sst  000041.sst  000042.sst  000043.sst  000044.sst  000045.sst  IDENTITY  LOG  MANIFEST-000056
test-7/substrate-node-template-polkadot-v0.9.25/ev/chains/local_testnet/network/: secret_ed25519
test-7/substrate-node-template-polkadot-v0.9.25/node/: Cargo.toml
test-7/substrate-node-template-polkadot-v0.9.25/node/src/: service.rs
test-7/substrate-node-template-polkadot-v0.9.25/pallets/kitties/: cargo.toml  expand.rs
test-7/substrate-node-template-polkadot-v0.9.25/pallets/kitties/src/: lib.rs  mock.rs  tests.rs
test-7/substrate-node-template-polkadot-v0.9.25/pallets/my-template/src/: README.md  mytemplate.rs
test-7/substrate-node-template-polkadot-v0.9.25/pallets/offchain-indexing/: Cargo.toml
test-7/substrate-node-template-polkadot-v0.9.25/pallets/offchain-indexing/src/: lib.rs
test-7/substrate-node-template-polkadot-v0.9.25/pallets/offchain-worker/: Cargo.toml
test-7/substrate-node-template-polkadot-v0.9.25/pallets/offchain-worker/src/: lib.rs  mock.rs
test-7/substrate-node-template-polkadot-v0.9.25/pallets/poe/: Cargo.toml
test-7/substrate-node-template-polkadot-v0.9.25/pallets/poe/src/: benchmarking.rs  lib.rs  mock.rs  tests.rs
test-7/substrate-node-template-polkadot-v0.9.25/runtime/: Cargo.toml
test-7/substrate-node-template-polkadot-v0.9.25/runtime/src/: lib.rs
test-8/: README.md
test-8/erc20/: lib.rs
test-8/flipper/: Cargo.toml
test-8/my_contract/: Cargo.toml  lib.rs
test-9/: README.md
test-9/substrate-v0.9.25-benchmark/: Cargo.toml  stencil-staging-raw.json  stencil-staging.json
test-9/substrate-v0.9.25-benchmark/.maintain/: frame-weight-template.hbs
test-9/substrate-v0.9.25-benchmark/node/: Cargo.toml
test-9/substrate-v0.9.25-benchmark/node/src/: chain_spec.rs
test-9/substrate-v0.9.25-benchmark/pallets/poe/: Cargo.toml
test-9/substrate-v0.9.25-benchmark/pallets/poe/src/: benchmarking.rs  lib.rs  mock.rs  weights.rs
test-9/substrate-v0.9.25-benchmark/runtime/: Cargo.toml
test-9/substrate-v0.9.25-benchmark/runtime/src/: lib.rs
